--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,22 @@
 Package: SphericalEllipse
-Title: What the Package Does (One Line, Title Case)
+Title: Construct a spherical ellipse on the surface of the Earth
 Version: 0.0.0.9000
 Authors@R: 
-    person("First", "Last", , "first.last@example.com", role = c("aut", "cre"),
-           comment = c(ORCID = "YOUR-ORCID-ID"))
-Description: What the package does (one paragraph).
+    person("Simon", "Wotherspoon", email="Simon.Wotherspoon@aad.gov.au",
+             role = c("aut", "cre"), comment = c(ORCID = "0000-0002-6947-4445"))
+Description: Calculate the longitude and latitude of a set of points
+	lying on a spherical ellipse on the lying surface of the Earth,
+	assuming the Earth is a sphere.
+Depends:
+    R(>= 3.3.0)
+Suggests:
+    geosphere,
+    knitr,
+    rmarkdown
 License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
 URL: https://github.com/SWotherspoon/SphericalEllipse
 BugReports: https://github.com/SWotherspoon/SphericalEllipse/issues
+VignetteBuilder: knitr
